Fixed CSS alignments and added arrow keypress feature

--- a/src/components/art.css
+++ b/src/components/art.css
@@ -1,15 +1,20 @@
 body{
     text-align: center;
+    overflow: hidden;
 }
 
 .wrapper{
-    margin: 50px;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 45% 45%;
+    justify-content: center;
+    text-align: center;
     grid-gap: 1em;
+    width: 100vw;
+    height: 70vh;
 }
 
 .art-titles{
+    padding: 1vw;
     font-size: 15px;
     font-weight: 800;
 }
@@ -23,36 +28,51 @@ body{
 }
 
 .image-container{
-    width: 50vw;
-    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .art-img{
-    padding: 10px;
-    max-width: 90%;
-    max-height: 90%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
-.next-button{
-    cursor: pointer;
-    margin-top: 0px
-}
-
-.begin-button{
+.button-cursor{
     cursor: pointer;
 }
 
-@media only screen and (max-width: 600px) {
+.loading{
+    font-weight: 800;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 90vh;
+}
+
+.welcome{
+    font-weight: 500;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 80vh; 
+}
+
+.next-section{
+    width: 100vw;
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 850px) {
     .wrapper{
         grid-template-columns: 100%;
+        grid-template-rows: 30vh;
     }
-
-    .image-container{
-        margin: 0 auto;
-    }
-
-    .art-titles{
-        text-align: left;
-    }
-
 }
