--- a/src/components/header.css
+++ b/src/components/header.css
@@ -4,20 +4,16 @@
 
 .headerStyles{
     width: 100vw;
-    height: 50px;
-}
-
-.headerStyles svg{
-    float: right;
-    padding-top: 20px;
-    padding-right: 30px;
+    height: 5vh;
+    display: flex;
+    padding-left: 1vw;
+    align-items: center;
 }
 
 .creditList{
     list-style: none;
-    padding-left: 0;
+    padding-left: 50px;
 }
-
 
 .creditList a{
     text-decoration: none;
@@ -30,21 +26,3 @@
     color: black;
 }
 
-.loading{
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 90vh;
-}
-
-.welcome{
-    font-weight: 500;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 80vh; 
-}
